test/compile-errors/wrong-number-type-args.crow
magic<out, in> opt out(a opt in)
	todo

use-it<out, in> opt out(a opt in)
	a magic<out>
